Refactor and add ParameterInterval, ParamterIntervalArray, IntegerIntervalArray