@@ -1,12 +1,17 @@
-package com.mlab.pg.reconstruction;
+package com.mlab.pg.reconstruction.strategy;
 
+import com.mlab.pg.reconstruction.PointType;
+import com.mlab.pg.reconstruction.PointTypeArray;
+import com.mlab.pg.reconstruction.ProfileCharacteriser;
+import com.mlab.pg.reconstruction.TypeInterval;
+import com.mlab.pg.reconstruction.TypeIntervalArray;
 import com.mlab.pg.util.MathUtil;
 import com.mlab.pg.xyfunction.IntegerInterval;
 import com.mlab.pg.xyfunction.Parabole;
 import com.mlab.pg.xyfunction.Straight;
 import com.mlab.pg.xyfunction.XYVectorFunction;
 
-public class ProcessBorderIntervalsStrategy_EqualArea implements ProcessBorderIntervalsStrategy {
+public class ProcessBorderIntervalsStrategy_LessSquares implements ProcessBorderIntervalsStrategy {
 
 	protected XYVectorFunction originalGradePoints;
 	protected int baseSize;
@@ -15,7 +20,7 @@ public class ProcessBorderIntervalsStrategy_EqualArea implements ProcessBorderIn
 	protected TypeIntervalArray originalIntervalArray;
 	protected TypeIntervalArray resultIntervalArray;
 	
-	public ProcessBorderIntervalsStrategy_EqualArea() {
+	public ProcessBorderIntervalsStrategy_LessSquares() {
 
 	}
 
@@ -64,58 +69,37 @@ public class ProcessBorderIntervalsStrategy_EqualArea implements ProcessBorderIn
 				i++;				
 			}
 		}
-		//System.out.println(resultIntervalArray.size());
-		if(resultIntervalArray.size()>1) {			
-			// Si el primer segmento ha quedado del tipo BORDER, le asigno del tipo del siguiente
-			TypeInterval firstInterval = resultIntervalArray.get(0); 
-			if(firstInterval.getPointType() == PointType.BORDER_POINT) {
-				processFirstSegmentAsBorder();
-			}
-			
-			// Si el último segmento ha quedado del tipo BORDER, le asigno el tipo del anterior
-			int last = resultIntervalArray.size()-1;
-			if(resultIntervalArray.get(last).getPointType() == PointType.BORDER_POINT) {
-				resultIntervalArray.get(last-1).setEnd(resultIntervalArray.get(last).getEnd());
-				resultIntervalArray.remove(last);
-			}
+
+		// Si el primer segmento ha quedado del tipo BORDER, le asigno del tipo del siguiente
+		TypeInterval firstInterval = resultIntervalArray.get(0); 
+		if(firstInterval.getPointType() == PointType.BORDER_POINT) {
+			processFirstSegmentAsBorder();
+		}
+		
+		// Si el último segmento ha quedado del tipo BORDER, le asigno el tipo del anterior
+		int last = resultIntervalArray.size()-1;
+		if(resultIntervalArray.get(last).getPointType() == PointType.BORDER_POINT) {
+			resultIntervalArray.get(last-1).setEnd(resultIntervalArray.get(last).getEnd());
+			resultIntervalArray.remove(last);
 		}
 		return resultIntervalArray;
 	}
-	
 
 	private void processFirstSegmentAsBorder() {
-		if(resultIntervalArray.get(0).size()<4) {
-			// Si tiene menos de cuatro puntos se lo asigno al siguiente
-			resultIntervalArray.get(1).setStart(0);
-			resultIntervalArray.remove(0);
-			return;
-		}
+				
+		int first = resultIntervalArray.get(0).getStart();
+		int last = resultIntervalArray.get(1).getEnd();
+		double[] rr = originalGradePoints.rectaMinimosCuadrados(first, last);
 		
-		int last = resultIntervalArray.get(0).getEnd();
-		double[] rr = originalGradePoints.rectaPosteriorEqualArea(0, last);
 		TypeInterval nextSegment =resultIntervalArray.get(1);
+		nextSegment.setStart(0);
 		if(rr[1]<=thresholdSlope) {
-			// La recta es horizontal = grade
-			if(nextSegment.getPointType()==PointType.GRADE) {
-				// Si el siguiente es recta, los uno en uno solo
-				nextSegment.setStart(0);
-				resultIntervalArray.remove(0);
-			} else {
-				// Si el siguiente es VC, el primero lo convierto en recta
-				resultIntervalArray.get(0).setPointType(PointType.GRADE);
-			}
+			// Es una grade
+			nextSegment.setPointType(PointType.GRADE);
 		} else {
-			// Caso aproxima mejor la parábola
-			if(nextSegment.getPointType()==PointType.GRADE) {
-				// Si el siguiente es recta, el primero lo convierto en VC
-				resultIntervalArray.get(0).setPointType(PointType.VERTICAL_CURVE);
-			} else {
-				// Si el siguiente es VC las uno en una sola 
-				// TODO Quizás habría que comprobar si aproxima mejor con una sola o con dos independientes
-				nextSegment.setStart(1);
-				resultIntervalArray.remove(0);
-			}
+			nextSegment.setPointType(PointType.VERTICAL_CURVE);
 		}
+		resultIntervalArray.remove(0);
 	}
 	/**
 	 * Procesa los intervalos BorderPoint con un solo punto
@@ -151,9 +135,20 @@ public class ProcessBorderIntervalsStrategy_EqualArea implements ProcessBorderIn
 		for(int i=currentBorderSegment.getStart(); i<=currentBorderSegment.getEnd(); i++) {
 			XYVectorFunction adjustedPoints = new XYVectorFunction();
 			
-			double[] r1 = originalGradePoints.rectaAnteriorEqualArea(previousSegment.getStart(), i);
-			double[] r2 = originalGradePoints.rectaPosteriorEqualArea(i, followingSegment.getEnd());
-						
+			double[] r1 = originalGradePoints.rectaMinimosCuadrados(previousSegment.getStart(), i);
+			double[] r2 = originalGradePoints.rectaMinimosCuadrados(i, followingSegment.getEnd());
+			
+			// Hay que ajustarlas en el último punto. Las desplazo paralelamente
+			// a la ordenada media
+			double xcomun = originalGradePoints.getX(i);
+			double y1 = r1[0] + r1[1] * xcomun;
+			double y2 = r2[0] + r2[1] * xcomun;
+			double ycomun = (y1 + y2)/2.0;
+			double pdte1 = r1[1];
+			r1 = MathUtil.rectaPtoPendiente(xcomun, ycomun, pdte1);
+			double pdte2 = r2[1];
+			r2 = MathUtil.rectaPtoPendiente(xcomun, ycomun, pdte2);
+			
 			// Genero las coordenadas de los puntos ajustados
 			for(int j=previousSegment.getStart(); j<i; j++) {
 				double x = originalGradePoints.getX(j);
@@ -183,9 +178,9 @@ public class ProcessBorderIntervalsStrategy_EqualArea implements ProcessBorderIn
 		}
 		//LOG.debug("ecm = " + ecmmin);
 		//LOG.debug("ecmmin_index = " + ecmmin_index);
-		resultIntervalArray.getLast().setEnd(ecmmin_index);
+		resultIntervalArray.get(resultIntervalArray.size()-1).setEnd(ecmmin_index);
 		resultIntervalArray.add(followingSegment.copy());
-		resultIntervalArray.getLast().setStart(ecmmin_index);
+		resultIntervalArray.get(resultIntervalArray.size()-1).setStart(ecmmin_index);
 	}
 	@Override
 	public TypeIntervalArray getOriginalTypeIntervalArray() {
